--- a/frontend/public/main.css
+++ b/frontend/public/main.css
@@ -1,7 +1,85 @@
 body {
-  margin: 20px;
-  background: #2d2d2d;
+  margin: 0;
+  padding: 0;
+  background: #DFF3E3;
+  font-family: 'SF Pro Text',-apple-system,BlinkMacSystemFont,Roboto,'Segoe UI',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
+}
+
+.container {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: min-content auto;
+}
+
+.sidebar-hidden .sidebar-title {
+  transform: translate(-150px,0)
+}
+
+.sidebar-title {
+  transition: all 0.3s ease;
+  position: absolute;
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
+.sidebar {
+  transition: width 0.3s;
+  width: 300px;
+}
+
+.sidebar-hidden {
+  width: 40px;
+}
+
+.sidebar-hidden .sidebar-hide-btn {
+  border-radius: 0;
+}
+
+.sidebar-hide-btn {
+  float: right;
+  background-color: #FFD1BA;
+  border: none;
   color: white;
+  padding: 20px 20px;
+  border-radius: 0 0 0 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition: all .4s ease;
+  opacity: 0.6;
+}
+
+.sidebar-hide-btn:hover {
+  opacity: 1;
+}
+
+.close-btn {
+  position: absolute;
+  margin-top: -9px;
+  margin-left: -10px;
+  width: 20px;
+}
+
+.close-btn:before, .close-btn:after {
+  position: absolute;
+  content: ' ';
+  height: 20px;
+  width: 2px;
+  background-color: #333;
+  margin-bottom: 10px;
+}
+.close-btn:before {
+  transform: rotate(45deg);
+}
+.close-btn:after {
+  transform: rotate(-45deg);
+}
+
+.notebook {
+  height: 100%;
+  background-color: #BEE5BF;
 }
 
 .heading {
